k8s/infrastructure/storage/longhorn/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "longhorn.dev.masonfox.me"
    - "longhorn-metrics.dev.masonfox.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: longhorn-metrics
          port: 8080
